# capstone-project-hilary

./: .gitignore  Pipfile  README.md  pyproject.toml
airport_helpers/: __init__.py  helpers.py  web_scraping.py
src/: .dockerignore  Dockerfile  airport_airline_daily_job.py  bts_flights_job.py  dim_airplane_job.py  glue_job_runner.py  glue_job_submission.py  requirements.txt
src/.astro/: config.yaml
src/bts_db1b/: get_data.py
src/bts_flights/: get_data.py
src/bts_t100/: get_data.py
src/dags/: backfill_flight_data_dag.py  query_trino.py  update_flight_data_dag.py
src/jobs/: airport_airline_summary_job.py  audit_airport_job.py  audit_flights_job.py  audit_merge_airport_job.py  audit_merge_flight_job.py  bts_flights_backfill_job.py  bts_flights_from_kafka_batch_job.py  extract_csv_upload_to_s3.py  glue_job_runner.py  publish_audit_to_prod.py
src/kafka/: kafka_helpers.py  local_consume_from_kafka.py  publish_to_kafka.py
src/streamlit_app/: app.py  streamlit_helpers.py
src/utils/: helpers.py
